Fix kobotyan button align

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ width: 10%;
     background:rgb(245, 239, 209);
     padding-left: 30px;
     padding-right: 30px;
-    margin-left: 370px;
+    margin-left: 400px;
     margin-top: 40px;
 }
 
@@ -69,8 +69,8 @@ p.button {
 }
 
 #luckycolor {
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
     background-color: #333;
 }
 
